--- a/apps/know-package-json/package.json
+++ b/apps/know-package-json/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@pkgc/know-package-json",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
     "next": "12.0.4",
@@ -14,9 +14,10 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@pkgc/eslint-config": "workspace:*",
     "@types/node": "16.11.10",
     "@types/react": "17.0.37",
-    "eslint": "7",
+    "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
   }
