--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,14 @@
     "*.json": "jsonc",
     "package.json": "json",
   },
-
+  "eslint.workingDirectories": [
+    {
+      "pattern": "apps/*"
+    },
+    {
+      "pattern": "libs/*"
+    }
+  ],
   "editor.tabSize": 2,
-  "editor.detectIndentation": false
+  "editor.detectIndentation": false,
 }
