--- a/libs/eslint-config/package.json
+++ b/libs/eslint-config/package.json
@@ -1,15 +1,11 @@
 {
   "name": "@pkgc/eslint-config",
   "version": "1.0.0",
-  "description": "A TypeScript ESLint ruleset designed for large teams and projects",
-  "license": "MIT",
   "private": true,
+  "description": "A TypeScript ESLint ruleset designed for @pkgc",
+  "license": "MIT",
   "scripts": {
     "build": ""
-  },
-  "peerDependencies": {
-    "eslint": "^6.0.0 || ^7.0.0",
-    "typescript": ">=3.0.0"
   },
   "dependencies": {
     "@rushstack/eslint-config": "2.4.5",
@@ -20,5 +16,9 @@
   "devDependencies": {
     "eslint": "7.32.0",
     "typescript": "4.5.2"
+  },
+  "peerDependencies": {
+    "eslint": "^6.0.0 || ^7.0.0",
+    "typescript": ">=3.0.0"
   }
 }
