--- a/libs/eslint-config/package.json
+++ b/libs/eslint-config/package.json
@@ -11,6 +11,7 @@
     "@rushstack/eslint-config": "2.4.5",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
     "prettier": "2.5.1"
   },
   "devDependencies": {
